--- a/cost-allocation-engine/docker-compose.yml
+++ b/cost-allocation-engine/docker-compose.yml
@@ -13,8 +13,10 @@ services:
     volumes:
       - ./init_db:/docker-entrypoint-initdb.d
 
-  python:
-    build: ./app
+  solver:
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: cost_model_python
     depends_on:
       - db
@@ -24,6 +26,4 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-    volumes:
-      - ./app:/app
-    command: ["python", "main.py"]
+    command: ["python", "-u", "app/test_connection.py"]
