--- a/cost-allocation-engine/requirements.txt
+++ b/cost-allocation-engine/requirements.txt
@@ -1,5 +1,7 @@
-psycopg2-binary>=2.9
-pandas>=2.2
-pandas>=2.2
-sqlalchemy==2.0.29
-
+sqlalchemy>=2.0.0
+psycopg2-binary>=2.9.0
+pandas>=2.0.0
+numpy>=1.24.0
+tenacity>=8.2.0
+pydantic-settings>=2.0.0
+python-dotenv
